--- a/src/job.yml
+++ b/src/job.yml
@@ -3,12 +3,11 @@ code: model
 command: >-
   python 
   train.py
-  --diabetes-csv ${{inputs.training_data}}
+  --training_data ${{inputs.training_data}}
 inputs:
   training_data: 
     type: uri_folder 
     path: azureml:diabetes-dev-folder:1
-    mode: ro_mount
   reg_rate: 0.01
 environment: azureml:AzureML-sklearn-0.24-ubuntu18.04-py37-cpu@latest
 compute: azureml:amlcluster
