--- a/.github/workflows/02-manual-trigger-job.yml
+++ b/.github/workflows/02-manual-trigger-job.yml
@@ -16,6 +16,6 @@ jobs:
       with:
         creds: ${{secrets.AZURE_CREDENTIALS}}
     - name: Train the model
-      run: az ml job create --file src/job.yml
+      run: az ml job create --file src/job.yml -g rg-dp100-l91c18a722d864a2188 -w mlw-dp100-l91c18a722d864a2188
 
 
