--- a/.github/workflows/03-pull-request.yml
+++ b/.github/workflows/03-pull-request.yml
@@ -6,5 +6,4 @@ on:
 jobs:
   job1:
     - name: Placeholder
-      run: |
-        echo "Will add code checks here in next challenge"
+      run: echo "Will add code checks here in next challenge"
