--- a/.github/workflows/03-pull-request.yml
+++ b/.github/workflows/03-pull-request.yml
@@ -1,9 +1,11 @@
 name: Pull request
 
 on:
-  [pull_request]
+  pull_request:
 
 jobs:
   job1:
-    - name: Placeholder
-      run: echo "Will add code checks here in next challenge"
+    steps:
+      - name: Placeholder
+        run: |
+        echo "Will add code checks here in next challenge"
