--- a/.github/workflows/03-pull-request.yml
+++ b/.github/workflows/03-pull-request.yml
@@ -7,5 +7,4 @@ jobs:
   job1:
     steps:
       - name: Placeholder
-        run: |
-        echo "Will add code checks here in next challenge"
+        run: echo "Will add code checks here in next challenge"
