--- a/.github/workflows/03-pull-request.yml
+++ b/.github/workflows/03-pull-request.yml
@@ -5,6 +5,7 @@ on:
 
 jobs:
   job1:
+  runs-on: ubuntu-latest
     steps:
       - name: Placeholder
         run: echo "Will add code checks here in next challenge"
