--- a/.github/workflows/training-deployment.yml
+++ b/.github/workflows/training-deployment.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Train the model
       run: az ml job create --file src/job.yml -g rg-dp100-l31ee2fb33446402285 -w mlw-dp100-l31ee2fb33446402285 --name dev-train
     - name: Stream the training logs
-      run: az ml job stream --name dev-train
+      run: az ml job stream --name dev-train -g rg-dp100-l31ee2fb33446402285 -w mlw-dp100-l31ee2fb33446402285
   train-prod:
     runs-on: ubuntu-latest
     needs: train-dev
@@ -36,4 +36,4 @@ jobs:
     - name: Train the model
       run: az ml job create --file src/job.yml -g rg-dp100-l8960dd5ad2b34e6d94 -w mlw-dp100-l8960dd5ad2b34e6d94 --name prod-train
     - name: Stream the training logs  
-      run: az ml job stream --name prod-train
+      run: az ml job stream --name prod-train -g rg-dp100-l8960dd5ad2b34e6d94 -w mlw-dp100-l8960dd5ad2b34e6d94
