--- a/.github/workflows/training-deployment.yml
+++ b/.github/workflows/training-deployment.yml
@@ -1,7 +1,7 @@
 name: Train in dev and prod
 
 on:
-  workflow_dispatch:
+  pull_request:
 
 jobs:
   train-dev:
@@ -32,4 +32,4 @@ jobs:
       with:
         creds: ${{secrets.AZURE_CREDENTIALS}}
     - name: Train the model
-      run: az ml job create --file src/job-prod.yml --stream -g rg-dp100-l8960dd5ad2b34e6d94 -w mlw-dp100-l8960dd5ad2b34e6d94 --name prod-train
+      run: az ml job create --file src/job-prod.yml --stream -g rg-dp100-l8960dd5ad2b34e6d94 -w mlw-dp100-l8960dd5ad2b34e6d94
